--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -41,10 +41,12 @@
 
   h2 {
     margin: 36px 0 8px 0;
+    text-decoration: none;
   }
 
   p {
     visibility: hidden;
+    text-decoration: none;
   }
 }
 
@@ -75,6 +77,7 @@
   h2 {
     color: $color-light;
     text-align: center;
+    padding: 10px;
   }
 
   p {
@@ -162,7 +165,7 @@
 }
 
 .instagram {
-  margin: 20px;
-  color: $color-danger;
-  text-decoration: underline;
+  padding-top: 10px;
+  color: #F07966;
+  text-decoration: none;
 }
